# ocr

./: .env.example  Cargo.toml  README.md
src/: error.rs  main.rs  models.rs  ocr.rs  output.rs
