[package]
name = "ocr"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8.9", features = ["multipart"] }
tokio = { version = "1.52.2", features = ["full"] }
tower-http = { version = "0.6.10", features = ["cors"] }

# OCR engine
ocrs = "0.12.2"
rten = "0.24.0"
rten-tensor = "0.24.0"
rten-imageproc = "0.24.0"

# Image processing
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Model downloading
url = "2.5"
ureq = "3.3"
home = "0.5"

# Environment configuration
dotenvy = "0.15"